exps/flarge_enc/vizel/README~
Two benchmarks could not be translated:

array_find_first_nonull.c
/seahorn/build/run/bin/clang -c -emit-llvm -D__SEAHORN__ -O1 -Xclang -disable-llvm-optzns -fgnu89-inline -m32 -I./build/run/include -o /tmp/sea-wxPEmp/array_find_first_nonull.bc ./flarge_enc/vizel/c/array_find_first_nonull.c
In file included from ./flarge_enc/vizel/c/array_find_first_nonull.c:6:
In file included from /usr/include/stdio.h:27:
/usr/include/features.h:367:12: fatal error: 'sys/cdefs.h' file not found
#  include <sys/cdefs.h>
           ^~~~~~~~~~~~~
	   1 error generated.


and


array_mul_init_true-unreach-call.c
/seahorn/build/run/bin/clang -c -emit-llvm -D__SEAHORN__ -O1 -Xclang -disable-llvm-optzns -fgnu89-inline -m32 -I./build/run/include -o /tmp/sea-RFbd3B/array_mul_init_true-unreach-call.bc ./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c
./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c:26:12: error: use of undeclared identifier 'SIZE'
    char a[SIZE];
               ^
	       ./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c:27:12: error: use of undeclared identifier 'SIZE'
	           char b[SIZE];
		              ^
			      ./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c:31:22: error: use of undeclared identifier 'SIZE'
			          for (i  = 0; i < SIZE ; i++) {
				                       ^
						       ./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c:36:18: error: use of undeclared identifier 'SIZE'
						           for (i=0; i< SIZE; i++) {
							                    ^
									    ./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c:37:12: warning: implicit declaration of function '__VERIFIER_nondet_short' is invalid in C99 [-Wimplicit-function-declaration]
									            if(__VERIFIER_nondet_short()) {
										               ^
											       ./flarge_enc/vizel/c/array_mul_init_true-unreach-call.c:44:18: error: use of undeclared identifier 'SIZE'
											           for (i=0; i< SIZE; i++) {
												                    ^


The latter one has other issues. If we fix it by declaring size and the VERIFIER function, it gives different results depending on whether it's translated to CHC with options
--horn-format=smt2 --horn-step=large

vs.

--horn-format=pure-smt2 --horn-step=large